# aoab-monitor

./: CNAME  README  README.md  histo.plt  index.html  latest.html  meson.build  next.html  projection.plt  updates.json
.github/workflows/: main.yml  weekly.yml
data/: word_stats.csv
src/: aoab_curl.h  curl.cpp  defs.proto  main.cpp  meson.build  parts.cpp
src/daily/: main.cpp  meson.build
src/lib/: aoab_curl.h  curl.cpp  defs.proto  facts.h  meson.build  utils.cpp  utils.h  volume.cpp  volume.h
src/lib/test/: test-utils.cpp
src/weekly/: historic_word_stats.cpp  historic_word_stats.h  meson.build  model.h  parts.cpp  utils.cpp  utils.h
src/weekly/test/: stats.cpp
stats/: index.html  word_stats.csv
